tests/test_compile/cases/internal_variables.stderr
error: proc-macro derive panicked
  --> $DIR/internal_variables.rs:89:20
   |
89 | #[derive(DekuRead, DekuWrite)]
   |                    ^^^^^^^^^
   |
   = help: message: error: attribute cannot contain `__deku_` these are internal variables. Please use the `deku::` instead.

error: proc-macro derive panicked
  --> $DIR/internal_variables.rs:89:10
   |
89 | #[derive(DekuRead, DekuWrite)]
   |          ^^^^^^^^
   |
   = help: message: error: attribute cannot contain `__deku_` these are internal variables. Please use the `deku::` instead.
